<resources>
    <string name="app_name">Vouch-it</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">searchTest</string>
    <!-- Menu names -->
    <string name="menu_home">בית</string>
    <string name="menu_analysis">סטטיסטיקות</string>
    <string name="menu_attractions">אטרקציות</string>
    <string name="menu_shows">הופעות</string>
    <string name="menu_restaurants">מסעדות</string>
    <string name="menu_spa">ספא</string>
    <string name="menu_sport">ספורט</string>
    <string name="menu_shopping">שופינג</string>
    <string name="menu_my_coupons">הקופונים שלי</string>
    <!-- End Menu names -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_company">CompanyActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="company_home_fragment_label">My coupons</string>
    <string name="company_edit_coupon_fragment_label">Edit</string>
    <string name="company_add_coupon_fragment_label">New coupon</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!--  String for signup activity  -->
    <string name="signup_as_company">Signup as company</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">actuin</string>
    <string name="action_sign_in">Sign in</string>

    <!--  START HOME_COMPANY_FRAGMENT  -->
    <string name="progress_bar_empty_coupons">You have no coupons</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="name_of_card">Name Of Card</string>
    <string name="cvv">Cvv</string>
    <string name="xxxx_xxxx_xxxx_xxxx">XXXX XXXX XXXX XXXX</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="card_number">Card Number</string>
    <!--  END HOME_COMPANY_FRAGMENT  -->

    <!--  String for add or edit coupon  -->
    <string name="coupon_title">שם הקופון:</string>
    <string name="coupon_description">תיאור הקופון:</string>
    <string name="coupon_category">קטגוריה:</string>
    <string name="coupon_title_input">שם הקופון</string>
    <string name="coupon_description_input">תיאור הקופון</string>
    <string name="coupon_price">מחיר הקופון:</string>
    <string name="coupon_price_input">מחיר הקופון</string>
    <string name="coupon_amount">כמות הקופונים:</string>
    <string name="coupon_amount_input">כמות הקופונים</string>
    <string name="coupon_start_date">תאריך התחלה:</string>
    <string name="coupon_end_date">תאריך סיום:</string>
    <string name="coupon_image">תמונה:</string>
    <string name="add_photo">הוסף תמונה</string>
    <string name="add_coupon">הוסף קופון</string>
    <!--  END String for add or edit coupon  -->

</resources>