<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_attractions"
            android:icon="@drawable/atractions_icon"
            android:title= "@string/menu_attractions" />
        <item
            android:id="@+id/nav_shows"
            android:icon="@drawable/shows_icon"
            android:title="@string/menu_shows" />
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/restaurant_icon"
            android:title="@string/menu_restaurants" />
        <item
            android:id="@+id/nav_spa"
            android:icon="@drawable/spa_icon"
            android:title="@string/menu_spa" />
        <item
            android:id="@+id/nav_sport"
            android:icon="@drawable/sport_icon"
            android:title="@string/menu_sport" />
        <item
            android:id="@+id/nav_shopping"
            android:icon="@drawable/shopping_bag_icon"
            android:title="@string/menu_shopping" />
        <item
            android:id="@+id/nav_my_coupons"
            android:icon="@drawable/my_coupon_icon"
            android:title="@string/menu_my_coupons" />

    </group>
</menu>