<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_spa"
        android:name="com.example.myapplication.fragments.spa.SpaFragment"
        android:label="@string/menu_spa"
        tools:layout="@layout/fragment_spa" />

    <fragment
        android:id="@+id/nav_shows"
        android:name="com.example.myapplication.fragments.shows.ShowsFragment"
        android:label="@string/menu_shows"
        tools:layout="@layout/fragment_shows" />

    <fragment
        android:id="@+id/nav_restaurants"
        android:name="com.example.myapplication.fragments.restaurants.RestaurantsFragment"
        android:label="@string/menu_restaurants"
        tools:layout="@layout/fragment_restaurant" />
</navigation>