<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.company.add_or_edit_coupon.AddOrEditCouponFragment"
    android:theme="@style/AppThemeMaterial"
    android:background="@drawable/background_empty">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/company_coupon_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/varela_round"
                    android:layoutDirection="rtl"
                    android:text="@string/coupon_title"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.055"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/company_coupon_title_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg_white"
                    android:elegantTextHeight="true"
                    android:fontFamily="@font/varela_round"
                    android:hint="@string/coupon_title_input"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLines="2"
                    android:minLines="1"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="7dp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_coupon_name" />

                <TextView
                    android:id="@+id/company_coupon_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/varela_round"
                    android:layoutDirection="rtl"
                    android:text="@string/coupon_description"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.068"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_coupon_title_input" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/company_coupon_description_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg_white"
                    android:elegantTextHeight="true"
                    android:fontFamily="@font/varela_round"
                    android:hint="@string/coupon_description_input"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLines="5"
                    android:minLines="1"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="7dp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_coupon_description" />

                <TextView
                    android:id="@+id/company_coupon_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="240dp"
                    android:fontFamily="@font/varela_round"
                    android:layoutDirection="rtl"
                    android:text="@string/coupon_category"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.068"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_coupon_description_input" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg_white"
                    android:contentDescription="categories"
                    android:fontFamily="@font/varela_round"
                    android:layoutDirection="rtl"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_coupon_category" />

                <TextView
                    android:id="@+id/company_coupon_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="274dp"
                    android:fontFamily="@font/varela_round"
                    android:layoutDirection="rtl"
                    android:text="@string/coupon_price"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinner" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/company_coupon_price_input"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg_white"
                    android:fontFamily="@font/varela_round"
                    android:hint="@string/coupon_price_input"
                    android:inputType="numberDecimal"
                    android:layoutDirection="rtl"
                    android:paddingStart="10dp"
                    android:paddingEnd="7dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_coupon_price" />

                <TextView
                    android:id="@+id/company_coupon_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="274dp"
                    android:fontFamily="@font/varela_round"
                    android:layoutDirection="rtl"
                    android:text="@string/coupon_amount"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_coupon_price_input" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/company_coupon_amount_input"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg_white"
                    android:fontFamily="@font/varela_round"
                    android:hint="@string/coupon_amount_input"
                    android:inputType="number"
                    android:layoutDirection="rtl"
                    android:paddingStart="10dp"
                    android:paddingEnd="7dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_coupon_amount" />

                <TextView
                    android:id="@+id/company_coupon_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="274dp"
                    android:fontFamily="@font/varela_round"
                    android:layoutDirection="rtl"
                    android:text="@string/coupon_start_date"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_coupon_amount_input" />

                <DatePicker
                    android:id="@+id/company_coupon_start_date_input"
                    android:layout_width="372dp"
                    android:layout_height="158dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg_white"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:fontFamily="@font/varela_round"
                    android:paddingStart="10dp"
                    android:paddingEnd="7dp"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_coupon_start_date" />

                <TextView
                    android:id="@+id/company_coupon_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="274dp"
                    android:fontFamily="@font/varela_round"
                    android:layoutDirection="rtl"
                    android:text="@string/coupon_end_date"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_coupon_start_date_input" />

                <DatePicker
                    android:id="@+id/company_coupon_end_date_input"
                    android:layout_width="372dp"
                    android:layout_height="158dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg_white"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:fontFamily="@font/varela_round"
                    android:paddingStart="10dp"
                    android:paddingEnd="7dp"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_coupon_end_date" />


                <TextView
                    android:id="@+id/company_coupon_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="22dp"
                    android:fontFamily="@font/varela_round"
                    android:layoutDirection="rtl"
                    android:text="@string/coupon_image"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/company_coupon_image_button_input"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_coupon_end_date_input" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/company_coupon_image_button_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="130dp"
                    android:layout_marginBottom="50dp"
                    android:fontFamily="@font/varela_round"
                    android:layoutDirection="rtl"
                    android:text="@string/add_photo"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/green_light"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="12dp"
                    app:layout_constraintBottom_toTopOf="@+id/company_coupon_add_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_coupon_end_date_input" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/company_coupon_add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="115dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="115dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/varela_round"
                    android:text="@string/add_coupon"
                    android:textAppearance="?attr/textAppearanceButton"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.51"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_coupon_image_button_input" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
